AuctionHouse_WebApplication/src/main/java/com/example/auctionhouse_webapplication/error/InvalidAuctionParametersException.java
package com.example.auctionhouse_webapplication.error;

public class InvalidAuctionParametersException extends RuntimeException {

    public InvalidAuctionParametersException(String message) {
        super(message);
    }

}
